# NeneCppProject

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: CMakeLists.txt
{{cookiecutter.project_slug}}/cmake/: {{project_slug}}Config.cmake.in
{{cookiecutter.project_slug}}/note/: commands.md  todo.txt
{{cookiecutter.project_slug}}/src/: CMakeLists.txt  main.cpp
{{cookiecutter.project_slug}}/tests/: CMakeLists.txt
